Repository GitHub Proyecto Final - Agregado enlace Home desde pestañas Comprar

--- a/comprarPorMenor.html
+++ b/comprarPorMenor.html
@@ -23,7 +23,7 @@
         <!-- Menú navegable -->
            
         <h1 class="titleProductos">Productos Serviplas - Por Menor</h1>
-        <!-- <h5><a href="index.html" class="caseHomeComprar">Home</a></h5>     -->
+        <h5><a href="index.html" class="caseHomeComprar">Home</a></h5>
     </header>
 
     <!-- <section class="sectionProvisoria">
