--- a/index.html
+++ b/index.html
@@ -52,15 +52,16 @@
             <p class="pNosotros">
             Somos fabricantes de bolsas de polipropileno desde hace más de 30 años en el mercado. Hoy además nos incorporamos en el negocio de papelera y artículos de limpieza con nuestro local ubicado en San Miguel.
             </p> 
+            <h5 class="titleProductos">Lamentamos informar que momentáneamente no funciona la compra vía web</h5>
             <!-- Modificación de descripción sobre nosotros -->
         </div>
         <div class="video-nosotros">
-            <video class="videoNegocio" src="videos-papelera/InShot_20210922_213424226.mp4" controls width="320" height="320"></video>
+            <video class="videoNegocio" src="videos-papelera/videopapeleraC.mp4" controls ></video>
         </div>
     </section>
 
    
-        <footer class="footer">
+        <footer id= "Contacto" class="footer">
             <div class="container">
                 <div class="row">
                     <div class="footer-col">
@@ -84,7 +85,7 @@
                     <div class="footer-col">
                         <h4>Ubicación</h4>
                         <ul>
-                            <li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1642.9832434138034!2d-58.72546851062557!3d-34.554403906862504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbd57b6e8c489%3A0xa20c62d06cbb0956!2sServiplas!5e0!3m2!1ses!2sar!4v1632242362636!5m2!1ses!2sar" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe></li>
+                            <li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1642.9832434138034!2d-58.72546851062557!3d-34.554403906862504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbd57b6e8c489%3A0xa20c62d06cbb0956!2sServiplas!5e0!3m2!1ses!2sar!4v1632242362636!5m2!1ses!2sar" style="border:0;" loading="lazy"></iframe></li>
                         </ul>
                     </div>
                 </div>
@@ -93,13 +94,6 @@
 
 
 
-
-
-        <!-- <h5><a href="index.html" class="caseHome">Home</a></h5> -->
-        <!-- <h4 class="firma"><a href="index.html" class="firma">© 2021 Serviplas.</a></h4>
-    </footer> -->
-    
-<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
     
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
