Repository GitHub Proyecto Final - Actualización final + index

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
             <p class="pNosotros">
             Somos fabricantes de bolsas de polipropileno desde hace más de 30 años en el mercado. Hoy además nos incorporamos en el negocio de papelera y artículos de limpieza con nuestro local ubicado en San Miguel.
             </p> 
-            <h5 class="titleProductos">Lamentamos informar que momentáneamente no funciona la compra vía web</h5>
+            <h5 class="titleProductos">Lamentamos informar que momentáneamente no funciona la compra vía web.
+                Puede ponerse en contacto mediante mail o llamada telefónica indicados en la sección Contacto.
+            </h5>
             <!-- Modificación de descripción sobre nosotros -->
         </div>
         <div class="video-nosotros">
